# Qt_SeamlessM4T

./: CMakeLists.txt  HistoryMessageDialog.qml  MainWindow.qml  README.md  main.cpp  main.qml  server.py
src/: CMakeLists.txt  recorddatabase.cpp  recorddatabase.h  textanalyse.cpp  textanalyse.h
